B&L QA/objects/Primary_Sales__c.object
<CustomObject>
    <description>INDSU object to collect Primary sales data. This is used to integrate data from ERP.</description>
    <fields>
        <fullName>Area_CBU__c</fullName>
        <formula>Sales_Executive_Name__r.APAC_Area__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Area/CBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Sales_Executive_Name__r.APAC_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_YR_End_Date__c</fullName>
        <inlineHelpText>Current Year End Date</inlineHelpText>
        <label>Current YR End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_YR_Start_Date__c</fullName>
        <inlineHelpText>Current Year Start Date</inlineHelpText>
        <label>Current YR Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DB_Id_at_ERP__c</fullName>
        <label>DB Id at ERP</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DB Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Primary Sales</relationshipLabel>
        <relationshipName>Primary_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DB_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INDSU reference field for account profile object.</description>
        <label>DB Profile</label>
        <referenceTo>Account_Profile__c</referenceTo>
        <relationshipLabel>Primary Sales</relationshipLabel>
        <relationshipName>Primary_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FP_Date__c</fullName>
        <description>Fiscal Period is generated from year Month data from Oracle and day hard coded as 10. this formula feild will used for all MTD,YTD reporting.</description>
        <formula>DATE( Year__c ,  VALUE(Month__c) ,10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LY_CM_Revenue__c</fullName>
        <formula>LY_Revenue_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LY CM Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LY_Revenue_USD__c</fullName>
        <label>LY Revenue - USD</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LY_Revenue__c</fullName>
        <label>LY Revenue</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_YR_End_Date__c</fullName>
        <inlineHelpText>Last Year End Date</inlineHelpText>
        <label>Last YR End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_YR_Start_Date__c</fullName>
        <inlineHelpText>Last Year Start Date</inlineHelpText>
        <label>Last YR Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>CURR Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Date__c</fullName>
        <label>Record Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Sales_Executive_Name__r.APAC_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_USD__c</fullName>
        <label>Revenue – USD</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Executive_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Executive Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Primary_Sales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TY_CM_Revenue__c</fullName>
        <formula>Revenue_USD__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TY CM Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Id_at_ERP__c</fullName>
        <label>User Id at ERP</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <formula>Sales_Executive_Name__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>CURR Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>external_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Primary Sales</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>Month__c</columns>
        <columns>Sales_Executive_Name__c</columns>
        <columns>Region__c</columns>
        <columns>Revenue_USD__c</columns>
        <columns>LY_Revenue_USD__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Primary Sales</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Primary Sales</pluralLabel>
    <recordTypes>
        <fullName>APACSU_Primary_Sale</fullName>
        <active>true</active>
        <description>Primary sale delta data in ERP will be integrated through BIZ Talk to salesforce.com</description>
        <label>APACSU Primary Sale</label>
    </recordTypes>
    <recordTypes>
        <fullName>INDSU_Primary_Sale</fullName>
        <active>true</active>
        <label>INDSU Primary Sale</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>